# cpp-educational-sandbox

./: .gitignore  README.md
advanced/game_of_life/: CMakeLists.txt  main.cpp  readme.md
advanced/solar_system/: CMakeLists.txt  main.cpp  readme.md
curriculum/: 01_computing_and_datatypes.cpp  02_variables_and_io.cpp  03_control_flow.cpp  04_functions.cpp  05_structs_and_classes.cpp  06_pointers_and_references.cpp  07_vectors.cpp  08_inheritance.cpp  09_polymorphism.cpp  readme.md
games/clicker/: CMakeLists.txt  main.cpp  readme.md
games/platformer/: CMakeLists.txt  main.cpp  readme.md
games/pong/: CMakeLists.txt  generate_sounds.py  main.cpp  readme.md
games/snake/: CMakeLists.txt  main.cpp  readme.md
games/tetris/: CMakeLists.txt  main.cpp  readme.md
